--- a/style.css
+++ b/style.css
@@ -7,10 +7,25 @@ span {
     font-weight: bold;
 }
 
+.info {
+    display: flex;
+    justify-content: space-around;
+    width: 99vw;
+    background-color: grey;
+    border: 5px rgb(144,144,144);
+    border-style: ridge;
+}
+
+.info div {
+    width: 200px;
+    font-size: 30px;
+    height: 3vh;
+}
+
 .battlefield {
     background-color: green;
     width: 100vw;
-    height: 100vh;
+    height: 97vh;
     display: flex;
     align-items: center;
     /* justify-content: flex-start; */
@@ -25,10 +40,14 @@ span {
     background-color: #b5651d;
     width: 90vw;
     height: 30vh;
-    margin: 10px 0px 
+    margin: 10px 0px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: right;
+    align-items: center;
 }
 
-.wall {
+#wall {
     background-color: grey;
     width: 10vw;
     height: 90vh;
@@ -62,4 +81,18 @@ p {
     margin: auto;
     text-align: center;
     max-width: 500px;
+}
+
+
+.enemy {
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+}
+
+.air {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
 }
